v0.4.0/_sources/autoapi/ad_hoc_diffractometer/index.rst.txt
ad_hoc_diffractometer
=====================

.. py:module:: ad_hoc_diffractometer

.. autoapi-nested-parse::

   Import: ``ad_hoc_diffractometer``

   ad_hoc_diffractometer — Multi-circle diffractometer geometry and related calculations.


Submodules
----------

.. toctree::
   :maxdepth: 1

   /autoapi/ad_hoc_diffractometer/axes/index
   /autoapi/ad_hoc_diffractometer/constants/index
   /autoapi/ad_hoc_diffractometer/conversions/index
   /autoapi/ad_hoc_diffractometer/display/index
   /autoapi/ad_hoc_diffractometer/factories/index
   /autoapi/ad_hoc_diffractometer/forward/index
   /autoapi/ad_hoc_diffractometer/geometry/index
   /autoapi/ad_hoc_diffractometer/lattice/index
   /autoapi/ad_hoc_diffractometer/mode/index
   /autoapi/ad_hoc_diffractometer/orientation/index
   /autoapi/ad_hoc_diffractometer/radiation/index
   /autoapi/ad_hoc_diffractometer/refinement/index
   /autoapi/ad_hoc_diffractometer/reflection/index
   /autoapi/ad_hoc_diffractometer/rotation/index
   /autoapi/ad_hoc_diffractometer/sample/index
   /autoapi/ad_hoc_diffractometer/scan/index
   /autoapi/ad_hoc_diffractometer/stage/index
   /autoapi/ad_hoc_diffractometer/surface/index


